frontend_exp_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-exp
  annotations:
    app.openshift.io/connects-to: |
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"backend"}]
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: frontend-exp
  template:
    metadata:
      labels:
        app: frontend-exp
    spec:
      containers:
        - name: frontend-exp
          image: ghcr.io/ondrejsika/counter-frontend-go
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 40m
              memory: 40Mi
          startupProbe:
            httpGet:
              path: /api/livez
              port: http
          livenessProbe:
            httpGet:
              path: /api/livez
              port: http
